--- a/index.html
+++ b/index.html
@@ -585,13 +585,13 @@
             <div class="banner">
                 <div class="banner-slides">
                     <div class="slide">
-                        <img src="/anh1.jpg" alt="Trường Tiểu Học Xuân Mai B">
+                        <img src="./anh1.jpg" alt="Trường Tiểu Học Xuân Mai B">
                     </div>
                     <div class="slide">
-                        <img src="/anh2.jpg" alt="Hoạt động học sinh">
+                        <img src="./anh2.jpg" alt="Hoạt động học sinh">
                     </div>
                     <div class="slide">
-                        <img src="/anh3.jpg" alt="Hoạt động giáo viên">
+                        <img src="./anh3.jpg" alt="Hoạt động giáo viên">
                     </div>
                 </div>
                 <div class="banner-controls">
@@ -684,7 +684,7 @@
                 <div class="section-content">
                     <div class="facebook-box">
                         <p>Kết nối với chúng tôi qua Facebook</p>
-                        <img src="/facebook.jpg" alt="Facebook Page Preview" style="width: 120px;">
+                        <img src="./facebook.jpg" alt="Facebook Page Preview" style="width: 120px;">
                     </div>
                 </div>
             </div>
