--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                     <h3>TRƯỜNG TIỂU HỌC XUÂN MAI B</h3>
                     <p>Địa chỉ: Thị trấn Xuân Mai, Huyện Chương Mỹ, Hà Nội</p>
                     <p>Điện thoại: 024.1234.5678</p>
-                    <p>Email: thxuanmaiB@hanoiedu.vn</p>
+                    <p>Email: info@pax.edu.vn , admin@xuanmaips.com</p>
                 </div>
                 <div class="footer-section">
                     <h3>LIÊN KẾT HỮU ÍCH</h3>
