--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trường Tiểu Học Xuân Mai B</title>
+    <title>PAX ACADEMY</title>
     <style>
         * {
             margin: 0;
@@ -521,7 +521,7 @@
                 <div class="logo">
                     <img src="logo.png" alt="Logo Trường Tiểu Học Xuân Mai B">
                     <div class="school-name">
-                        <h1>TRƯỜNG TIỂU HỌC XUÂN MAI B</h1>
+                        <h1>PAX ACADEMY</h1>
                         <p>Địa chỉ: Thị trấn Xuân Mai, Huyện Chương Mỹ, Hà Nội</p>
                     </div>
                 </div>
