--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAX ACADEMY</title>
+    <title>Pax Academy</title>
     <style>
         * {
             margin: 0;
@@ -519,9 +519,9 @@
         <div class="container">
             <div class="header-top">
                 <div class="logo">
-                    <img src="logo.png" alt="Logo Trường Tiểu Học Xuân Mai B">
+                    <img src="logo.png" alt="Logo PAX ACADEMY">
                     <div class="school-name">
-                        <h1>PAX ACADEMY</h1>
+                        <h1>Pax Academy</h1>
                         <p>Địa chỉ: Thị trấn Xuân Mai, Huyện Chương Mỹ, Hà Nội</p>
                     </div>
                 </div>
@@ -585,7 +585,7 @@
             <div class="banner">
                 <div class="banner-slides">
                     <div class="slide">
-                        <img src="./anh1.jpg" alt="Trường Tiểu Học Xuân Mai B">
+                        <img src="./anh1.jpg" alt="Pax Academy">
                     </div>
                     <div class="slide">
                         <img src="./anh2.jpg" alt="Hoạt động học sinh">
@@ -612,8 +612,8 @@
                     <ul class="news-list">
                         <li class="news-item">
                             <div class="date">25/02/2025</div>
-                            <h3>Lễ khai giảng năm học mới 2024-2025 tại Trường Tiểu học Xuân Mai B</h3>
-                            <p>Sáng ngày 05/09/2024, hòa chung không khí tưng bừng của ngày toàn dân đưa trẻ đến trường, Trường Tiểu học Xuân Mai B long trọng tổ chức Lễ khai giảng năm học mới 2024-2025...</p>
+                            <h3>Lễ khai giảng năm học mới 2024-2025 tại Pax Academy</h3>
+                            <p>Sáng ngày 05/09/2024, hòa chung không khí tưng bừng của ngày toàn dân đưa trẻ đến trường, Pax Academy long trọng tổ chức Lễ khai giảng năm học mới 2024-2025...</p>
                             <a href="#" class="read-more">Xem thêm »</a>
                         </li>
                         <li class="news-item">
@@ -625,7 +625,7 @@
                         <li class="news-item">
                             <div class="date">15/02/2025</div>
                             <h3>Hoạt động ngoại khóa: Trải nghiệm tại Làng Văn hóa các dân tộc Việt Nam</h3>
-                            <p>Ngày 10/02/2025, Trường Tiểu học Xuân Mai B đã tổ chức chuyến tham quan, học tập và trải nghiệm tại Làng Văn hóa các dân tộc Việt Nam cho học sinh khối 4 và khối 5...</p>
+                            <p>Ngày 10/02/2025, Pax Academy đã tổ chức chuyến tham quan, học tập và trải nghiệm tại Làng Văn hóa các dân tộc Việt Nam cho học sinh khối 4 và khối 5...</p>
                             <a href="#" class="read-more">Xem thêm »</a>
                         </li>
                     </ul>
@@ -696,7 +696,7 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-section">
-                    <h3>TRƯỜNG TIỂU HỌC XUÂN MAI B</h3>
+                    <h3>Pax Academy</h3>
                     <p>Địa chỉ: Thị trấn Xuân Mai, Huyện Chương Mỹ, Hà Nội</p>
                     <p>Điện thoại: 024.1234.5678</p>
                     <p>Email: info@pax.edu.vn , admin@xuanmaips.com</p>
@@ -715,7 +715,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© 2025 Trường Tiểu Học Xuân Mai B. Tất cả các quyền được bảo lưu.</p>
+                <p>© 2025 Pax Academy. Tất cả các quyền được bảo lưu.</p>
             </div>
         </div>
     </footer>
